<resources>
    <string name="app_name">HELPER</string>

    <!--  Common  -->
    <string name="btn_label_confirm">확인</string>
    <string name="btn_label_cancel">취소</string>
    <string name="description_success_image">요청 성공을 알리는 이미지</string>
    <string name="guide_message_retry_action">잠시 후 다시 시도해주세요.</string>
    <string name="format_amount_unit">%s원</string>

    <!--  Home_nav_btn -->
    <string name="label_home_screen">홈</string>
    <string name="label_search_screen">약품 검색</string>
    <string name="label_map_screen">지도</string>
    <string name="label_mypage_screen">마이페이지</string>

    <!--  Home  -->
    <string name="label_add_card">결제 수단을 등록해주세요</string>
    <string name="description_add_card">카드 추가를 안내하는 이미지</string>
    <string name="btn_label_payment">결제하기</string>
    <string name="label_transfer_history">송금내역</string>
    <string name="guide_message_empty_transfer_history">아직 거래 내역이 없어요</string>
    <string name="description_main_logo">메인 페이지의 로고 이미지</string>
    <string name="text_mainpage_title">상비약 처방은 헬 퍼</string>
    <!-- Home body -->
    <string name="text_mainpage_body">내 주변 가장 가까운 판매점을 찾아보세요!</string>
    <string name="text_mainpage_card_section">어디가 아프세요?</string>


    <!--  Map -->
    <string name="appbar_title_map">Map </string>

    <!-- Mypage -->
    <string name="appbar_title_mypage">Mypage </string>


    <!--  Transfer Search -->
    <string name="appbar_title_transfer_screen">MEDICINE LIST(약품 목록)</string>
    <string name="description_transfer_account_image">송금할 계좌의 프로필 이미지</string>
    <string name="guide_message_add_payment_method">결제 수단을 등록해주세요</string>

    <!--  Transfer  -->
    <string name="appbar_title_transfer">얼마를 보낼까요?</string>
    <string name="guide_message_max_transfer_amount">모바일에서는 10억 미만의 금액만 송금할 수 있습니다</string>
    <string name="guide_message_exceed_balance">잔고가 부족합니다</string>
    <string name="label_transfer_amount">보낼 금액</string>
    <string name="label_number_1">1</string>
    <string name="label_number_2">2</string>
    <string name="label_number_3">3</string>
    <string name="label_number_4">4</string>
    <string name="label_number_5">5</string>
    <string name="label_number_6">6</string>
    <string name="label_number_7">7</string>
    <string name="label_number_8">8</string>
    <string name="label_number_9">9</string>
    <string name="label_number_two_zeros">00</string>
    <string name="label_number_0">0</string>

    <!--  Transfer confirm dialog  -->
    <string name="format_transfer_info">%1$s에게 %2$s원을\n이체하시겠습니까?</string>
    <string name="format_bank_account">%1$s %2$s</string>
    <string name="description_confirm_dialog_image">앱 로고 이미지</string>
    <string name="btn_label_transfer_confirm">이체하기</string>

    <!--  Transfer result  -->
    <string name="format_transfer_success_info">%1$s님의 계좌로\n %2$s원을 이체했어요</string>

    <!--  Transfer detail  -->
    <string name="appbar_title_transfer_detail">이체 상세 내역</string>
    <string name="label_transfer_receiver">받는분</string>
    <string name="label_transfer_type">거래유형</string>
    <string name="label_transfer_date">일시</string>
    <string name="label_transfer_balance">거래 후 잔액</string>
    <string name="label_transfer_account">입금 계좌</string>
    <string name="label_withdraw">출금</string>

    <!--  Medicine Detail   -->
    <string name="appbar_title_medicine_detail_screen">약품 상세 페이지</string>
    <string name="label_payment_card_number">카드번호</string>
    <string name="hint_input_card_number">Card number</string>
    <string name="label_valid_date">유효기간</string>
    <string name="hint_input_valid_date">MM/YY</string>
    <string name="label_password">비밀번호 앞 2자리</string>
    <string name="hint_input_password">··</string>
    <string name="label_card_name">카드이름</string>
    <string name="hint_input_card_name">카드 이름 입력</string>


    <!--  Payment registration   -->
    <string name="guide_message_payment_register_success">결제 수단이 정상적으로\n등록 되었어요</string>
    <string name="guide_message_payment_register_failure">잠시 오류가 발생했습니다\n결제 수단 등록에 실패했어요</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--common card section list 카드 리스트-->
    <string name="appbar_title_cold_medicine">약 목록</string>
    <string name="description_pharmacy_location">해당 판매점 위치로 이동</string>
    <string name="description_pharmacy_map_image">내 주변 판매점 지도 이미지</string>

    <!--  cold medicine 감기  -->
    <string name="text_card_cough_body">기침이 나와요</string>

    <!--headache medicine 두통 -->
    <string name="appbar_title_headache_medicine">두통 약 목록</string>
    <string name="description_headache_medicine_image">두통 약품 이미지 안내</string>

    <!-- muscle medicine 근육통-->
    <string name="appbar_title_muscle_medicine">근육 약 목록</string>
    <string name="description_muscle_medicine_image">근육 약품 이미지 안내</string>

    <!-- bruise medicine-->
    <string name="appbar_title_bruise_medicine">타박상 약 목록</string>
    <string name="description_bruise_medicine_image">타박상 약품 이미지 안내</string>

    <!-- stomach medicine-->
    <string name="appbar_title_stomach_medicine">복통 약 목록</string>
    <string name="description_stomach_medicine_image">복통 약품 이미지 안내</string>

    <!-- fever medicine-->
    <string name="appbar_title_fever_medicine">온열 약 목록</string>
    <string name="description_fever_medicine_image">온열 약품 이미지 안내</string>

    <!-- tooth medicine-->
    <string name="appbar_title_tooth_medicine">치통 약 목록</string>
    <string name="description_tooth_medicine_image">치통 약품 이미지 안내</string>

    <!-- other medicine-->
    <string name="appbar_title_other_medicine">기타 약 목록</string>
    <string name="description_other_medicine_image">기타 약품 이미지 안내</string>


    <!-- search bar -->
    <string name="searchbar_hint">약품 검색</string>

    <!-- medicine detail -->
    <string name="tab1">효능</string>
    <string name="tab2">사용법</string>
    <string name="tab3">보관</string>
    <string name="tab4">주의</string>
    <string name="description_medicine_representative_image">약품 이미지 출력</string>


</resources>